--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "router": "^1.3.3",
     "vue": "^2.6.10",
     "vue-piczoom": "^1.0.6",
+    "vue-pose": "^0.5.1",
     "vue-router": "^3.0.7",
     "vuex": "^3.0.1"
   },
